# fourier-attack

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: main.yaml
fourier_attack/: __init__.py
fourier_attack/attack/: __init__.py  attack.py  exhausive_fourier.py  pgd.py
fourier_attack/fourier/: basis.py
fourier_attack/util/: __init__.py  metric.py  normalize.py
tests/: conftest.py
tests/attack/: test_attack.py  test_exhausive_fourier.py  test_pgd.py
tests/fourier/: test_basis.py
tests/util/: test_metric.py  test_normalize.py
tests/weight/: cifar10_resnet50.pth
