[tool.poetry]
name = "fourier-attack"
version = "0.1.0"
description = ""
authors = ["yoshihiro fukuhara"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
torch = {version = "^1.7.0", python = "^3.8", platform = "linux"}
torchvision = {version = "^0.8.1", python = "^3.8", platform = "linux"}
isort = "^5.6.4"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
flake8 = "^3.8.4"
black = "^20.8b1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
